--- a/desafio-12/index.html
+++ b/desafio-12/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-        Por <a target="_blank" href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+        <h1>Cordel Moderno</h1>
+        <p>Por <a target="_blank" href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
          
     </header>
 
